MILESTONE REACHED: dombusiness1 Product Aggregate complete. Tests made for all domain files.